Fix spacing on apple

--- a/css/style.css
+++ b/css/style.css
@@ -230,9 +230,9 @@ nav .button {
 .card-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  -moz-column-gap: 12px;
+  /* -moz-column-gap: 12px;
   column-gap: 12px;
-  row-gap: 36px;
+  row-gap: 36px; */
 }
 
 .card {
@@ -245,6 +245,9 @@ nav .button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
   height: 40vw;
   text-align: center;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-bottom: 12px;
 }
 
 .card p {
@@ -454,13 +457,16 @@ nav .button {
   }
 
   .card-grid {
-    -moz-column-gap: 24px;
-    column-gap: 24px;
+    /* -moz-column-gap: 24px;
+    column-gap: 24px; */
   }
 
   .card {
     width: 100%;
     height: 15vw;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-bottom: 0;
   }
 }
 
